# invenio-search

./: .editorconfig  .git-blame-ignore-revs  .travis.invenio.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  requirements.txt  usage.rst
examples/: app-fixtures.sh  app-setup.sh  app-teardown.sh  app.py  requirements.txt
invenio_search/: __init__.py  admin.py  api.py  bundles.py  cache.py  cli.py  compat.py  config.py  engine.py  errors.py  es.py  ext.py  facet_builders.py  fixtures.py  forms.py  manage.py  mapping.py  models.py  proxies.py  proxy.py  registry.py  services.py  user_settings.py  utils.py  version.py  washers.py
invenio_search/base/: analyser.json  baseSchema.json  filter.json
invenio_search/contrib/: __init__.py  access_records.py  records.py
invenio_search/custom/: customAnalyser.json  customField.json  customFilter.json
invenio_search/enhancers/: cache_results.py  collection_filter.py  facet_filter.py
invenio_search/exceptions/: __init__.py
invenio_search/helpers/: __init__.py
invenio_search/query/: __init__.py
invenio_search/response/: __init__.py
invenio_search/result/: elasticmapping.json
invenio_search/schemas/: schema.json
invenio_search/sync/: __init__.py  api.py  cli.py  config.py  ext.py  indexer.py  proxies.py  tasks.py
invenio_search/translations/: invenio.pot
invenio_search/upgrades/: __init__.py  invenio_search_2015_11_10_legacy_removal.py  search_2014_07_21_facets_per_collection.py  search_2015_03_03_fix_models.py
tests/: conftest.py  test_cli.py  test_collection_filter_enhancer.py  test_contrib_records.py  test_elasticsearch_walker.py  test_examples_app.py  test_facet_filter_enhancer.py  test_invenio_search.py  test_query.py  test_search_services.py  test_utils.py  test_views.py
(+49 files in other folders)
