# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
# Copyright (C) 2022 TU Wien.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-search
version = attr: invenio_search.__version__
description = "Invenio module for information retrieval."
long_description = file: README.rst, CHANGES.rst
keywords = invenio search
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-search
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-base>=1.2.3,<2.0.0
    dictdiffer>=0.9.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    invenio-db[versioning]>=1.0.0,<2.0.0
    mock>=1.3.0
    pytest-invenio>=2.0.0,<3.0.0
    Sphinx>=3
    invenio-accounts>=2.0.0,<3.0.0
elasticsearch7 =
    elasticsearch>=7.0.0,<7.14
    elasticsearch-dsl>=7.0.0,<8.0.0
opensearch1 =
    opensearch-py>=1.1.0,<2.0.0
    opensearch-dsl>=1.0.0,<2.0.0
opensearch2 =
    opensearch-py>=2.0.0,<3.0.0
    opensearch-dsl>=2.0.0,<3.0.0

[options.entry_points]
invenio_base.api_apps =
    invenio_search = invenio_search:InvenioSearch
invenio_base.apps =
    invenio_search = invenio_search:InvenioSearch

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_search --cov-report=term-missing
testpaths = docs tests invenio_search
filterwarnings = ignore::pytest.PytestDeprecationWarning
